--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -406,4 +406,26 @@ h2{
     display: flex;
     align-items: center;
     justify-content: center;
+} 
+.main-content{padding: 10%;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 300px;
+    background-color: #282828;
+    background-position: center;
+    background-size: auto;
+}
+
+.contenedor-de-filtros{
+    margin: 10px;
+    padding: 10px;
+    display: flex;
+}
+
+
+.elementos{
+    display: flex;
 }
